--- a/environment.yml
+++ b/environment.yml
@@ -1,14 +1,233 @@
 name: KAssess
 channels:
-  - defaults
   - pytorch
   - nvidia
+  - defaults
 dependencies:
-  - pytorch
-  - pytorch-cuda=12.4
-  - torchaudio
-  - torchvision
-  - transformers
-  - scikit-learn
-  - jsonlines
-  - nltk
+  - _libgcc_mutex=0.1=main
+  - _openmp_mutex=5.1=1_gnu
+  - aiohttp=3.9.5=py312h5eee18b_0
+  - aiosignal=1.2.0=pyhd3eb1b0_0
+  - aom=3.6.0=h6a678d5_0
+  - arrow-cpp=16.1.0=hc1eb8f0_0
+  - attrs=23.1.0=py312h06a4308_0
+  - aws-c-auth=0.6.19=h5eee18b_0
+  - aws-c-cal=0.5.20=hdbd6064_0
+  - aws-c-common=0.8.5=h5eee18b_0
+  - aws-c-compression=0.2.16=h5eee18b_0
+  - aws-c-event-stream=0.2.15=h6a678d5_0
+  - aws-c-http=0.6.25=h5eee18b_0
+  - aws-c-io=0.13.10=h5eee18b_0
+  - aws-c-mqtt=0.7.13=h5eee18b_0
+  - aws-c-s3=0.1.51=hdbd6064_0
+  - aws-c-sdkutils=0.1.6=h5eee18b_0
+  - aws-checksums=0.1.13=h5eee18b_0
+  - aws-crt-cpp=0.18.16=h6a678d5_0
+  - aws-sdk-cpp=1.10.55=h721c034_0
+  - blas=1.0=mkl
+  - boost-cpp=1.82.0=hdb19cb5_2
+  - bottleneck=1.3.7=py312ha883a20_0
+  - brotli-python=1.0.9=py312h6a678d5_8
+  - bzip2=1.0.8=h5eee18b_6
+  - c-ares=1.19.1=h5eee18b_0
+  - ca-certificates=2024.7.2=h06a4308_0
+  - cairo=1.16.0=hb05425b_5
+  - certifi=2024.7.4=py312h06a4308_0
+  - charset-normalizer=3.3.2=pyhd3eb1b0_0
+  - click=8.1.7=py312h06a4308_0
+  - cuda-cudart=12.4.127=h99ab3db_0
+  - cuda-cudart_linux-64=12.4.127=hd681fbe_0
+  - cuda-cupti=12.4.127=h6a678d5_1
+  - cuda-libraries=12.4.0=0
+  - cuda-nvrtc=12.4.127=h99ab3db_1
+  - cuda-nvtx=12.4.127=h6a678d5_1
+  - cuda-opencl=12.4.127=h6a678d5_0
+  - cuda-runtime=12.4.0=0
+  - cuda-version=12.4=hbda6634_3
+  - datasets=2.19.1=py312h06a4308_0
+  - dav1d=1.2.1=h5eee18b_0
+  - dill=0.3.8=py312h06a4308_0
+  - expat=2.6.2=h6a678d5_0
+  - ffmpeg=6.1.1=h4c62175_0
+  - filelock=3.13.1=py312h06a4308_0
+  - fontconfig=2.14.1=h4c34cd2_2
+  - freetype=2.12.1=h4a9f257_0
+  - frozenlist=1.4.0=py312h5eee18b_0
+  - fsspec=2024.3.1=py312h06a4308_0
+  - gflags=2.2.2=h6a678d5_1
+  - giflib=5.2.1=h5eee18b_3
+  - glib=2.78.4=h6a678d5_0
+  - glib-tools=2.78.4=h6a678d5_0
+  - glog=0.5.0=h6a678d5_1
+  - graphite2=1.3.14=h295c915_1
+  - harfbuzz=4.3.0=hf52aaf7_2
+  - huggingface_hub=0.23.1=py312h06a4308_0
+  - icu=73.1=h6a678d5_0
+  - idna=3.7=py312h06a4308_0
+  - importlib-metadata=7.0.1=py312h06a4308_0
+  - intel-openmp=2023.1.0=hdb19cb5_46306
+  - jinja2=3.1.4=py312h06a4308_0
+  - joblib=1.4.2=py312h06a4308_0
+  - jpeg=9e=h5eee18b_2
+  - jsonlines=2.0.0=pyhd3eb1b0_2
+  - krb5=1.20.1=h143b758_1
+  - lame=3.100=h7b6447c_0
+  - lcms2=2.12=h3be6417_0
+  - ld_impl_linux-64=2.38=h1181459_1
+  - leptonica=1.82.0=h42c8aad_2
+  - lerc=3.0=h295c915_0
+  - libabseil=20240116.2=cxx17_h6a678d5_0
+  - libarchive=3.6.2=h6ac8c49_3
+  - libboost=1.82.0=h109eef0_2
+  - libbrotlicommon=1.0.9=h5eee18b_8
+  - libbrotlidec=1.0.9=h5eee18b_8
+  - libbrotlienc=1.0.9=h5eee18b_8
+  - libcublas=12.4.2.65=0
+  - libcufft=11.2.0.44=0
+  - libcufile=1.9.1.3=h99ab3db_1
+  - libcurand=10.3.5.147=h99ab3db_1
+  - libcurl=8.7.1=h251f7ec_0
+  - libcusolver=11.6.0.99=0
+  - libcusparse=12.3.0.142=0
+  - libdeflate=1.17=h5eee18b_1
+  - libedit=3.1.20230828=h5eee18b_0
+  - libev=4.33=h7f8727e_1
+  - libevent=2.1.12=hdbd6064_1
+  - libffi=3.4.4=h6a678d5_1
+  - libgcc-ng=11.2.0=h1234567_1
+  - libgfortran-ng=11.2.0=h00389a5_1
+  - libgfortran5=11.2.0=h1234567_1
+  - libglib=2.78.4=hdc74915_0
+  - libgomp=11.2.0=h1234567_1
+  - libgrpc=1.62.2=h2d74bed_0
+  - libiconv=1.16=h5eee18b_3
+  - libjpeg-turbo=2.0.0=h9bf148f_0
+  - libnghttp2=1.57.0=h2d74bed_0
+  - libnpp=12.2.5.2=0
+  - libnvfatbin=12.4.127=h7934f7d_2
+  - libnvjitlink=12.4.99=0
+  - libnvjpeg=12.3.1.89=0
+  - libogg=1.3.5=h27cfd23_1
+  - libopus=1.3.1=h7b6447c_0
+  - libpng=1.6.39=h5eee18b_0
+  - libprotobuf=4.25.3=he621ea3_0
+  - libssh2=1.11.0=h251f7ec_0
+  - libstdcxx-ng=11.2.0=h1234567_1
+  - libtheora=1.1.1=h7f8727e_3
+  - libthrift=0.15.0=h1795dd8_2
+  - libtiff=4.5.1=h6a678d5_0
+  - libuuid=1.41.5=h5eee18b_0
+  - libvorbis=1.3.7=h7b6447c_0
+  - libvpx=1.13.1=h6a678d5_0
+  - libwebp=1.3.2=h11a3e52_0
+  - libwebp-base=1.3.2=h5eee18b_0
+  - libxcb=1.15=h7f8727e_0
+  - libxml2=2.10.4=hfdd30dd_2
+  - llvm-openmp=14.0.6=h9e868ea_0
+  - lz4-c=1.9.4=h6a678d5_1
+  - markupsafe=2.1.3=py312h5eee18b_0
+  - mkl=2023.1.0=h213fc3f_46344
+  - mkl-service=2.4.0=py312h5eee18b_1
+  - mkl_fft=1.3.8=py312h5eee18b_0
+  - mkl_random=1.2.4=py312hdb19cb5_0
+  - mpmath=1.3.0=py312h06a4308_0
+  - multidict=6.0.4=py312h5eee18b_0
+  - multiprocess=0.70.15=py312h06a4308_0
+  - ncurses=6.4=h6a678d5_0
+  - networkx=3.3=py312h06a4308_0
+  - nltk=3.8.1=py312h06a4308_0
+  - numexpr=2.8.7=py312hf827012_0
+  - numpy=1.26.4=py312hc5e2394_0
+  - numpy-base=1.26.4=py312h0da6c21_0
+  - ocl-icd=2.3.2=h5eee18b_1
+  - openh264=2.1.1=h4ff587b_0
+  - openjpeg=2.4.0=h9ca470c_2
+  - openssl=3.0.14=h5eee18b_0
+  - orc=2.0.1=h2d29ad5_0
+  - packaging=24.1=py312h06a4308_0
+  - pandas=2.2.2=py312h526ad5a_0
+  - pcre2=10.42=hebb0a14_1
+  - pillow=10.4.0=py312h5eee18b_0
+  - pip=24.0=py312h06a4308_0
+  - pixman=0.40.0=h7f8727e_1
+  - pyarrow=16.1.0=py312h526ad5a_0
+  - pybind11-abi=5=hd3eb1b0_0
+  - pysocks=1.7.1=py312h06a4308_0
+  - python=3.12.4=h5148396_1
+  - python-dateutil=2.9.0post0=py312h06a4308_2
+  - python-tzdata=2023.3=pyhd3eb1b0_0
+  - python-xxhash=2.0.2=py312h5eee18b_1
+  - pytorch=2.4.0=py3.12_cuda12.4_cudnn9.1.0_0
+  - pytorch-cuda=12.4=hc786d27_6
+  - pytorch-mutex=1.0=cuda
+  - pytz=2024.1=py312h06a4308_0
+  - pyyaml=6.0.1=py312h5eee18b_0
+  - re2=2022.04.01=h295c915_0
+  - readline=8.2=h5eee18b_0
+  - regex=2023.10.3=py312h5eee18b_0
+  - requests=2.32.3=py312h06a4308_0
+  - s2n=1.3.27=hdbd6064_0
+  - safetensors=0.4.2=py312hb7cc22b_1
+  - scikit-learn=1.5.1=py312h526ad5a_0
+  - scipy=1.13.1=py312hc5e2394_0
+  - setuptools=69.5.1=py312h06a4308_0
+  - six=1.16.0=pyhd3eb1b0_1
+  - snappy=1.1.10=h6a678d5_1
+  - sqlite=3.45.3=h5eee18b_0
+  - sympy=1.12=py312h06a4308_0
+  - tbb=2021.8.0=hdb19cb5_0
+  - tesseract=5.2.0=h6a678d5_0
+  - threadpoolctl=3.5.0=py312he106c6f_0
+  - tk=8.6.14=h39e8969_0
+  - tokenizers=0.19.1=py312ha11519a_0
+  - torchaudio=2.4.0=py312_cu124
+  - torchtriton=3.0.0=py312
+  - torchvision=0.19.0=py312_cu124
+  - tqdm=4.66.4=py312he106c6f_0
+  - transformers=4.41.2=py312h06a4308_0
+  - typing-extensions=4.11.0=py312h06a4308_0
+  - typing_extensions=4.11.0=py312h06a4308_0
+  - tzdata=2024a=h04d1e81_0
+  - urllib3=2.2.2=py312h06a4308_0
+  - utf8proc=2.6.1=h5eee18b_1
+  - wheel=0.43.0=py312h06a4308_0
+  - xxhash=0.8.0=h7f8727e_3
+  - xz=5.4.6=h5eee18b_1
+  - yaml=0.2.5=h7b6447c_0
+  - yarl=1.9.3=py312h5eee18b_0
+  - zipp=3.17.0=py312h06a4308_0
+  - zlib=1.2.13=h5eee18b_1
+  - zstd=1.5.5=hc292b87_2
+  - pip:
+      - antlr4-python3-runtime==4.9.3
+      - backoff==2.2.1
+      - blinker==1.8.2
+      - cfgraph==0.2.1
+      - chardet==5.2.0
+      - flask==3.0.3
+      - flask-cors==4.0.1
+      - httplib2==0.22.0
+      - isodate==0.6.1
+      - itsdangerous==2.2.0
+      - jsonasobj==1.3.1
+      - mwoauth==0.4.0
+      - oauthlib==3.2.2
+      - plantuml==0.3.0
+      - pyjsg==0.11.10
+      - pyjwt==2.9.0
+      - pyparsing==3.1.2
+      - pyshex==0.8.1
+      - pyshexc==0.9.1
+      - python-xz==0.5.0
+      - rdflib==7.0.0
+      - rdflib-jsonld==0.6.1
+      - rdflib-shim==1.0.3
+      - requests-oauthlib==2.0.0
+      - shexer==2.5.3
+      - shexjsg==0.8.2
+      - simplejson==3.19.2
+      - sparqlslurper==0.5.1
+      - sparqlwrapper==2.0.0
+      - werkzeug==3.0.3
+      - wikidataintegrator==0.9.30
+      - wlighter==1.0.1
