add gpu support in devcontainer

--- a/.devcontainer/devcontainer.json
+++ b/.devcontainer/devcontainer.json
@@ -8,6 +8,9 @@
             "GROUP_ID": "${localEnv:GID}"
         }
     },
+    "runArgs": [
+        "--gpus", "all"
+    ],
     "customizations": {
         "vscode": {
             "extensions": [
